--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1581,7 +1581,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CEi-cH-nbK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5848.8000000000002" y="-712.3152709359606"/>
+            <point key="canvasLocation" x="5911" y="-796"/>
         </scene>
         <!--Share Music VC-->
         <scene sceneID="TSz-0i-R6A">
